--- a/src/Pages/Dashboard/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard/Dashboard.css
@@ -1,3 +1,9 @@
 nav a{
     margin-bottom: 5px;
 }
+@media only screen and (min-width: 700px) {
+    .navbar-container{
+        display: flex;
+        flex-direction: column;
+    }
+  }
